Updated references, solved a small bug and changed some butts back to readable

--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -38,8 +38,9 @@
     src: url('../fonts/Road_Rage.otf') format('opentype');
 }
 
-/*
-    root
+/* Legend:
+
+    defaults
     shared
     colours
     controls
@@ -262,9 +263,18 @@
     --mud-zindex-tooltip: initial;
 }
 
+/* defaults */
 html, body {
     font-family: NovaRegular;
     font-size: 16px;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
